<resources>
    <string name="app_name">First App</string>
    <string name="country">Country</string>
    <string name="birth_date">Birth Date</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="Button">Button</string>
    <string name="what_do_you_want_on_your_burger">What do you want on your burger?</string>
    <string name="pork">Pork</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="test">TEST</string>
    <string name="order">Order</string>
    <string name="salad">Salad</string>
    <string name="cheese">Cheese</string>
    <string name="onions">Onions</string>
    <string name="show_toast">Show Toast</string>
    <string name="this_is_a_custom_toast">This is a custom toast!</string>
    <string name="todo">TODO</string>
    <string name="custom_toast">Custom Toast</string>
    <string name="start_activity">Permissions</string>
    <string name="second_activity_text">Second Activity Text</string>
    <string name="go_back">Go Back</string>
    <string name="go_to_3rd">Go To 3rd</string>
    <string name="select_image">Select Image</string>
    <string name="close_app">Close App</string>
    <string name="feedback">Feedback</string>
    <string name="favorites">Favorites</string>
    <string name="add_contact">Add Contact</string>
    <string name="settings">Settings</string>
    <string name="dialogue_1">Dialogue 1</string>
    <string name="dialog_2">Dialog 2</string>
    <string name="dialog_3">Dialog 3</string>
    <string name="new_todo">New Todo</string>
    <string name="title">Title</string>
    <string name="recycler_view">Recycler View</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="go_to_fragment">Go To Fragment</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="activity">ACTIVITY</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>