<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="First Name"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/etLastName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Last Name"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etFirstName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etBirthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Birth Date"
        android:ems="10"
        android:hint="@string/birth_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

    <EditText
        android:id="@+id/etCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Country"
        android:ems="10"
        android:hint="@string/country"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/btnApply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBirthDate" />

    <Button
        android:id="@+id/btnApply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etCountry"
        app:layout_constraintTop_toBottomOf="@+id/etBirthDate" />

    <TextView
        android:id="@+id/tvPick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_do_you_want_on_your_burger"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCountry" />

    <RadioGroup
        android:id="@+id/rgMeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPick"
        app:layout_editor_absoluteX="83dp"
        app:layout_editor_absoluteY="170dp">

        <RadioButton
            android:id="@+id/rbChicken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/chicken" />

        <RadioButton
            android:id="@+id/rbBeef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beef" />

        <RadioButton
            android:id="@+id/rbPork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pork" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/cbCheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheese"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgMeat" />

    <CheckBox
        android:id="@+id/cbOnions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbCheese" />

    <CheckBox
        android:id="@+id/cbSalad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbOnions" />

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbSalad" />

    <TextView
        android:id="@+id/tvOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOrder" />


</androidx.constraintlayout.widget.ConstraintLayout>